// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardFooterMenuItemsBuilder Returns expected menu items: supportsIssueFiling=false supportsCopyFailureDetails=false 1`] = `[]`;

exports[`CardFooterMenuItemsBuilder Returns expected menu items: supportsIssueFiling=false supportsCopyFailureDetails=true 1`] = `
[
  {
    "iconName": "DocumentCopyRegular",
    "key": "copyfailuredetails",
    "onClick": [Function],
    "text": "Copy failure details",
  },
]
`;

exports[`CardFooterMenuItemsBuilder Returns expected menu items: supportsIssueFiling=true supportsCopyFailureDetails=false 1`] = `
[
  {
    "componentRef": [Function],
    "iconName": "BugFilled",
    "key": "fileissue",
    "onClick": [Function],
    "text": "File issue",
  },
]
`;

exports[`CardFooterMenuItemsBuilder Returns expected menu items: supportsIssueFiling=true supportsCopyFailureDetails=true 1`] = `
[
  {
    "componentRef": [Function],
    "iconName": "BugFilled",
    "key": "fileissue",
    "onClick": [Function],
    "text": "File issue",
  },
  {
    "iconName": "DocumentCopyRegular",
    "key": "copyfailuredetails",
    "onClick": [Function],
    "text": "Copy failure details",
  },
]
`;
